[build-system]
requires=["setuptools>=68","wheel"]
build-backend="setuptools.backends.legacy:build"
[project]
name="bq-data-pipeline"
version="1.0.0"
description="BigQuery data pipeline with upsert logic"
readme="README.md"
license={text="MIT"}
requires-python=">=3.10"
authors=[{name="Jaimin Babariya",email="jaiminbabariya7@gmail.com"}]
keywords=["bigquery","sql","data-engineering","gcp","analytics"]
[tool.sqlfluff.core]
dialect="bigquery"
